2012-10-26         Arnold D. Robbins     <arnold@skeeve.com>

	* revtwoway.3am: Clean up example.
	* revtwoway.c: Minor cleanup (add translation calls).

2012-10-24         Arnold D. Robbins     <arnold@skeeve.com>

	* revtwoway.3am: New file.

2012-10-21         Arnold D. Robbins     <arnold@skeeve.com>

	* filefuncs.c (do_stat): Always clear the array.

2012-10-14         Arnold D. Robbins     <arnold@skeeve.com>

	* readdir.c, revoutput.c, revtwoway.c: Adjust for name change
	of IOBUF_PUBLIC to awk_input_buf_t. Additional sanitizing in
	revoutput.c to use `revoutput' everywhere instead of `revout'.
	* revoutput.3am: New file.
	* filefuncs.3am, fnmatch.3am, fork.3am, ordchr.3am, readdir.3am,
	readfile.3am, rwarray.3am, time.3am: Add ref to revoutput(3am).

2012-10-11         Arnold D. Robbins     <arnold@skeeve.com>

	* textext.c (try_modify_environ): Save array cookie in a separate
	variable so it isn't clobbered. Thanks to Andrew Schorr, by way
	of valgrind, for finding the bug.

2012-09-14         Arnold D. Robbins     <arnold@skeeve.com>

	* testext.c (try_modify_environ): New function and test.
	(var_test): Modified ARGC test, added additional.
	(test_scalar_reserved): New function and test.
	(try_modify_environ): Don't print count of ENVIRON elements.

2012-09-13         Dave Pitts            <dpitts@cozx.com>

	* gawkfts.c: Add defines and ifdefs for z/OS.
	* gawkfts.h: Add defines and ifdefs for z/OS. Fix // comments.
	* readdir.c (dir_get_record): Adjust sprintf format for z/OS.
	* rwarray.c: Add defines and ifdefs for z/OS. Fix // comments.

2012-09-11         Arnold D. Robbins     <arnold@skeeve.com>

	* readdir.c (do_readdir_do_ftype): Set ERRNO for bad arguments.
	* readdir.3a: Document same, minor fixes.

2012-09-07         Akim Demaille         <akim@lrde.epita.fr>

	* extension/gawkfts.h (__THROW): Define if it is not.
	Copied from getopt.h.
	* extension/gawkfts.c (fts_alloc): Since FTSENT.fts_statp is