@@ -99,7 +99,8 @@ EXTRA_DIST = build-aux/config.rpath  \
 
 dist_man_MANS = \
 	filefuncs.3am fnmatch.3am fork.3am ordchr.3am \
-	readdir.3am readfile.3am rwarray.3am time.3am
+	readdir.3am readfile.3am revoutput.3am \
+	revtwoway.3am rwarray.3am time.3am
 
 # gettext requires this
 SUBDIRS =
