@@ -1,3 +1,7 @@
+2012-10-28         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (dist_man_MANS): Update the list.
+
 2012-10-26         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* revtwoway.3am: Clean up example.
